k8s/phase3-graphql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: surypus-graphql
  labels:
    app: surypus-graphql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: surypus-graphql
  template:
    metadata:
      labels:
        app: surypus-graphql
    spec:
      containers:
        - name: surypus-graphql
          image: surypus-graphql:latest
          ports:
            - containerPort: 4000
