k8s/phase3-graphql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: surypus-graphql
spec:
  selector:
    app: surypus-graphql
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
